# genre-classification-MLOps

./: .gitignore  MLproject  README.md  config.yaml  main.py  pyproject.toml
check_data/: conftest.py  test_data.py
download/: conda.yml  download_data.py
evaluate/: conda.yml  run.py
preprocess/: MLproject  conda.yml  run.py
random_forest/: run.py
segregate/: run.py
