[tool.poetry]
name = "genre-classification"
version = "0.1.0"
description = "End-to-end mlflow pipeline for music genre classification."
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.2.3"
pytest = "6.2.2"
scipy = "1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
