[tool.poetry]
name = "genre-classification"
version = "0.1.0"
description = "End-to-end mlflow pipeline for music genre classification."
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.2.3"
pytest = "6.2.2"
scipy = "1.6.1"
wandb = "0.10.21"
scikit-learn = "0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
