[tool.poetry]
name = "genre-classification"
version = "0.1.0"
description = "End-to-end mlflow pipeline for music genre classification."
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
pandas = "1.2.3"
pytest = "6.2.2"
scipy = "1.8.0"
wandb = "0.10.21"
scikit-learn = "0.24.1"
mlflow = "1.24.0"
omegaconf = "2.0.6"
matplotlib = "3.2.2"
Pillow = "8.1.2"
hydra-core = "1.0.6"
hydra-joblib-launcher = "1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
